--- a/excess/excess.ipynb
+++ b/excess/excess.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Monte Carlo Simulation Exercise:  Electrolyte Solutions\n",
     "\n",
@@ -40,7 +43,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -51,7 +56,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Theory\n",
     "\n",
@@ -130,7 +138,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Part I. Mean Activity Coefficients in Bulk Solution\n",
     "\n",
@@ -145,7 +156,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Import required python modules"
    ]
@@ -154,7 +168,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -164,13 +180,15 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "from math import sqrt, pi, exp\n",
-    "import os.path, os, sys, json\n",
-    "%pwd"
+    "import os.path, os, sys, json"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Download and compile the MC software\n",
     "\n",
@@ -181,7 +199,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -194,14 +214,17 @@
     "else\n",
     "    cd faunus-1.0.0\n",
     "fi\n",
-    "CXX=clang++ CC=clang cmake . -DCMAKE_BUILD_TYPE=Release -DMYPLAYGROUND=`pwd`/../mc &>/dev/null\n",
+    "CXX=clang++ CC=clang cmake . -DCMAKE_BUILD_TYPE=Release -DMYPLAYGROUND=`pwd`/../mc #&>/dev/null\n",
     "make excess -j2\n",
-    "%cd .."
+    "cd .."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Run Monte Carlo simulations\n",
     "\n",
@@ -218,6 +241,8 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [],
@@ -272,7 +297,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Check MC output\n",
     "\n",
@@ -288,7 +316,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Plot mean activity coefficients\n",
     "\n",
@@ -308,6 +339,8 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -365,7 +398,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Ion-ion radial distribution function\n",
     "\n",
@@ -375,14 +411,17 @@
     "1. Explain the meaning and definition of $g(r).$\n",
     "1. Plot and discuss $g(r)$ for cation-anion and cation-anion. How are these influenced by ion size and radius?\n",
     "1. Discuss the differences between the three different salts. Focus on the cation-anion interaction.\n",
-    "2. What happens to $g(r)$ as the concentration increases. Look i.e. at NaCl and explain."
+    "1. What happens to $g(r)$ as the concentration increases. Look i.e. at NaCl and explain.\n",
+    "1. How is $g(r)$ affected by the bow size? What happens at long separation, when $r$ exceeds half the box length?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -399,7 +438,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -408,9 +449,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -422,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
