--- a/excess/excess.ipynb
+++ b/excess/excess.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Monte Carlo Simulation Exercise:  Electrolyte Solutions\n",
     "\n",
@@ -42,11 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# evaluate this cell to show a movie about MC\n",
@@ -56,10 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Theory\n",
     "\n",
@@ -132,16 +122,50 @@
     "1. What is $\\gamma_{\\pm}$ for sodium sulphate?\n",
     "2. Give the equivalent expression for the _mean_ excess chemical potential, i.e. the free energy change of adding a single, electroneutral salt molecule. Simplify the expression as much as possible.\n",
     "\n",
-    "### Widom Particle Insertion Method\n",
-    "_Literature: Mcquirrie, Chapter 14-1. [[Full text]](perturbationtheory.pdf)_\n"
+    "### Statistical Mechanical Perturbation\n",
+    "_Literature: D. McQuirrie, Chapter 14-1. [[Full text]](perturbationtheory.pdf) and B. Widom, \"Some Topics in the Theory of Fluids\" [[Full text]](http://dx.doi.org/10.1063/1.1734110)._\n",
+    "\n",
+    "Consider a Canonical Ensemble system, $NVT$, where the potential energy function can be written as\n",
+    "\n",
+    "$U = U^0 + U^1$.\n",
+    "\n",
+    "$U^0$ is the energy of some unperturbed reference system, and $U^1$ is a small perturbation that will give us $U$. The configuational integral of the final system is\n",
+    "\n",
+    "$$\n",
+    "Z = \\int e^{-\\beta (U^0 + U^1)} d\\mathcal{R}^N\n",
+    "$$\n",
+    "\n",
+    "where the integral runs over all states. Likewise, the configurational integral of the unperturbed system is $Z^0=\\int e^{-\\beta U^0}d\\mathcal{R}^N$ and multiplying and dividing $Z$ with this we get,\n",
+    "\n",
+    "$$\n",
+    "Z = \\int e^{-\\beta U^0} d\\mathcal{R}^N \\cdot \\frac{\\int e^{-\\beta U^0} e^{-\\beta U^1}  d\\mathcal{R}^N }{\\int e^{-\\beta U^0}d\\mathcal{R}^N}\n",
+    "= Z^0 \\langle e^{-\\beta U^1} \\rangle_0\n",
+    "$$\n",
+    "\n",
+    "That is, the configurational integral of the _final_ system can be obtained by averaging the exponential of the perturbation using configurations from the _unperturbed_ system (0). The Helmholtz free energy change associated with the perturbation naturally follows,\n",
+    "\n",
+    "$$\n",
+    "\\Delta A = -k_BT \\ln (Z/Z_0) = -k_BT\\ln  \\langle e^{-\\beta U^1} \\rangle_0\n",
+    "$$\n",
+    "\n",
+    "This important result is often used in MD/MC simulations to estimate free energy changes, for example the excess pressure by performing a _virtual volume move_ or the excess chemical potential by performing a _ghost particle insertion_.\n",
+    "The latter is known as Widom particle insertion - see link above - and we will use this to calculate activity coefficients.\n",
+    "As we already covered, the excess chemical potential, $\\mu_i^{ex}$, is the free energy _due to interactions_ upon inserting species $i$.\n",
+    "During simulation we sample an unperturbed system (0) of $N$ particles and occacionally insert a ghost or virtual particle. Calculating the energy change of this process, $U^1=U-U^0$ we can thus estimate $\\mu^{ex}$. After the energy calculation, the particle is removed and it will not influence configurations of the reference system (0) which must remain _unperturbed_.\n",
+    "\n",
+    "**Questions:**\n",
+    "1. Below you'll find a snapshot of the first page of Widom's article from 1963. Show explicitly how Eq. 1 leads to Eq. 2.\n",
+    "\n",
+    "2. Discuss the effectiveness of Widom's method if the system is dense.\n",
+    "\n",
+    "---\n",
+    "_B. Widom, 1963:_\n",
+    "![B. Widom 1963](widom1963.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Part I. Mean Activity Coefficients in Bulk Solution\n",
     "\n",
@@ -156,10 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Import required python modules"
    ]
@@ -167,11 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -185,10 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Download and compile the MC software\n",
     "\n",
@@ -198,11 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -221,10 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Run Monte Carlo simulations\n",
     "\n",
@@ -240,9 +247,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": false
    },
    "outputs": [],
@@ -297,10 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Check MC output\n",
     "\n",
@@ -316,10 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Plot mean activity coefficients\n",
     "\n",
@@ -338,9 +336,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -398,10 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Ion-ion radial distribution function\n",
     "\n",
@@ -418,11 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "r, g = np.loadtxt('rdf.dat', unpack=True)\n",
@@ -435,12 +423,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Widom Particle Insertion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above, activity coefficients or excess chemical potentials of ions were calculated simply from the average ion density in the grand canonical ensemble where activities are known and constant. An alternative method is to use Widom particle insertion which we covered in the theory section above.\n",
+    "In the MC code this can be done by activating an insertion analysis in the input file. The appropriate input is already there (`analysis->widom`) but the interval to which to run it, `nstep` is set to zero. Setting this to a positive integers will activate the sample.\n",
+    "\n",
+    "For example, if the number of MC steps, set by `macro=10` and `micro=1000`, then an `nstep=50` will lead to 200 calls to the Widom analysis. For each call you may specify how many times to insert a particle, `ninsert`, which will multiply the number of samples and thus improve statistics. For each insertion, a ghost particle is inserted at a random position and its energy is calculated, whereafter it is removed.\n",
+    "\n",
+    "** Questions: **\n",
+    "\n",
+    "1. For four different salt activities in the interval 50-300 mM, plot the activity coefficient of a neutral particle (add data to the arrays below).\n",
+    "2. Repeat the above with a larger radius of the neutral particle.\n",
+    "3. Discuss the results and estimate the [Setschenow coefficient](https://en.wikipedia.org/wiki/Specific_ion_interaction_theory).\n",
+    "4. How is the solubility of a greenhouse gas like methane affected by the salt content of the oceans?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "activity = [0] # salt activity. Add more...\n",
+    "gamma = [1]    # activity coefficient of neutral species. Add more...\n",
+    "\n",
+    "plt.plot(activity, gamma, 'o', color='red')\n",
+    "\n",
+    "plt.xlabel(r'$a$ (mol/l)')\n",
+    "plt.ylabel(r'$\\gamma$')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -449,7 +476,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -467,5 +494,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
