--- a/excess/excess.ipynb
+++ b/excess/excess.ipynb
@@ -2,9 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Monte Carlo Simulation Exercise:  Electrolyte Solutions\n",
+    "\n",
+    "_Mikael Lund, Division of Theoretical Chemistry, Lund university 2017_\n",
     "\n",
     "## Introduction to Jupyter Notebooks\n",
     "\n",
@@ -39,7 +44,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# evaluate this cell to show a movie about MC\n",
@@ -49,7 +58,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Theory\n",
     "\n",
@@ -57,15 +69,19 @@
     "_Litterature: Frenkel and Smith, Understanding Molecular Simulation_, Chapters 3 and 5.\n",
     "[[Open Access within LU]](http://ludwig.lub.lu.se/login?url=http://www.sciencedirect.com/science/book/9780122673511)\n",
     "\n",
-    "Metropolis Monte Carlo is an importance sampling technique where we bias the otherwise random MC method to sample points in coordinate space that _contribute_ to properties of interest. In molecular systems, configurations (microstates) with energies, $u$, much higher than the thermal energy, $k_BT$, have a very low probability due to the Boltzmann factor, $P(u) = \\exp(-u/k_BT)$, and therefore do not need to be explored.\n",
-    "In MC, we perform a finite number of _trial moves_ where the system is taken from on old state ($o$) to a new state ($n$) giving rise to an energy change $\\Delta u$.\n",
-    "The move is accepted or rejected based in the following criterium,\n",
+    "Metropolis Monte Carlo is an importance sampling technique where we bias the otherwise random MC method to sample points in coordinate space that _contribute_ to properties of interest. In molecular systems, configurations (microstates) with energies, $u$, much higher than the thermal energy, $k_BT$, have a very low probability due to the Boltzmann factor, $P(U) = \\exp(-U/k_BT)$, and therefore do not need to be frequently explored.\n",
+    "In MC, we perform a finite number of _trial moves_ where the system is taken from on old state ($o$) to a new state ($n$) giving rise to an energy change $\\Delta U$.\n",
+    "The move is accepted or rejected based in the following _acceptance criterium_,\n",
     "\n",
     "$$ \n",
-    "acc(o\\rightarrow n) = \\min(1, e^{-\\Delta u/k_BT})\n",
+    "acc(o\\rightarrow n) = \\min(1, e^{-\\Delta U/k_BT})\n",
     "$$\n",
     "\n",
-    "which will ensure that low energy states are more likely to occur than high energy states.\n",
+    "which will ensure that low energy states are more likely to occur than high energy states. Thus, if the energy decreases ($e^{-\\Delta U/k_BT}>1$) the move is always accepted.\n",
+    "Temperature and entropy enters the algorithm by allowing acceptance also for moves that leads to an energy _increase_.\n",
+    "As $T\\rightarrow\\infty$, all configurations are accepted leading to equal population of all states.\n",
+    "When $T\\rightarrow 0$ the system propagates towards a (local) minimum or ground state as expected from statistical thermodynamics.\n",
+    "It is important to realize that the Metropolis MC algorithm does not provide information on equilibrium properties, only. Thus from a MC simulation we cannot say anything about time-dependent or dynamic properties.\n",
     "\n",
     "In the MC program we will use in this lab, two moves are performed:\n",
     "\n",
@@ -123,6 +139,7 @@
     "2. Give the equivalent expression for the _mean_ excess chemical potential, i.e. the free energy change of adding a single, electroneutral salt molecule. Simplify the expression as much as possible.\n",
     "\n",
     "### Statistical Mechanical Perturbation\n",
+    "\n",
     "_Literature: D. McQuirrie, Chapter 14-1. [[Full text]](perturbationtheory.pdf) and B. Widom, \"Some Topics in the Theory of Fluids\" [[Full text]](http://dx.doi.org/10.1063/1.1734110)._\n",
     "\n",
     "Consider a Canonical Ensemble system, $NVT$, where the potential energy function can be written as\n",
@@ -135,7 +152,7 @@
     "Z = \\int e^{-\\beta (U^0 + U^1)} d\\mathcal{R}^N\n",
     "$$\n",
     "\n",
-    "where the integral runs over all states. Likewise, the configurational integral of the unperturbed system is $Z^0=\\int e^{-\\beta U^0}d\\mathcal{R}^N$ and multiplying and dividing $Z$ with this we get,\n",
+    "where the integral runs over all states and $\\beta=1/k_BT$. Likewise, the configurational integral of the unperturbed system is $Z^0=\\int e^{-\\beta U^0}d\\mathcal{R}^N$ and multiplying and dividing $Z$ with this we get,\n",
     "\n",
     "$$\n",
     "Z = \\int e^{-\\beta U^0} d\\mathcal{R}^N \\cdot \\frac{\\int e^{-\\beta U^0} e^{-\\beta U^1}  d\\mathcal{R}^N }{\\int e^{-\\beta U^0}d\\mathcal{R}^N}\n",
@@ -165,7 +182,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Part I. Mean Activity Coefficients in Bulk Solution\n",
     "\n",
@@ -180,7 +200,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Import required python modules"
    ]
@@ -188,7 +211,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -202,7 +229,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Download and compile the MC software\n",
     "\n",
@@ -212,7 +242,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -231,7 +265,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Run Monte Carlo simulations\n",
     "\n",
@@ -239,7 +276,7 @@
     "\n",
     "** Tasks: **\n",
     "1. Go through and understand the input below. For more information about Faunus input, see\n",
-    "[here](https://codedocs.xyz/mlund/faunus/inputoutput.html)\n",
+    "[here](https://codedocs.xyz/mlund/faunus/inputoutput.html). In particular, test how to change the number of MC steps, change the displacement parameter, box length.\n",
     "2. Have a look at the main C++ file [`mc/excess.cpp`](mc/excess.cpp) and understand the program flow, energy setup etc."
    ]
   },
@@ -247,6 +284,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [],
@@ -301,14 +341,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Check MC output\n",
     "\n",
     "** Questions: **\n",
     "1. Investigate how the displacement parameter (`dp`) affects the translational move _acceptance_ and _mean aquare displacement_ (see output about \"Markov Move: Single Particle Translation\")\n",
     "\n",
-    "2. Is there an optimum for `dp`?\n",
+    "2. Is there a best value for `dp`?\n",
     "\n",
     "2. How is the energy drift defined?\n",
     "\n",
@@ -317,7 +360,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Plot mean activity coefficients\n",
     "\n",
@@ -336,6 +382,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -393,24 +442,37 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Ion-ion radial distribution function\n",
     "\n",
     "We now plot the radial distribution function, $g(r)$, between ions as sampled during MC simulation.\n",
+    "This analysis is activate via the input in `analysis/atomrdf`.\n",
     "\n",
     "** Questions: **\n",
+    "\n",
     "1. Explain the meaning and definition of $g(r).$\n",
-    "1. Plot and discuss $g(r)$ for cation-anion and cation-anion. How are these influenced by ion size and radius?\n",
-    "1. Discuss the differences between the three different salts. Focus on the cation-anion interaction.\n",
-    "1. What happens to $g(r)$ as the concentration increases. Look i.e. at NaCl and explain.\n",
-    "1. How is $g(r)$ affected by the bow size? What happens at long separation, when $r$ exceeds half the box length?"
+    "\n",
+    "2. Plot and discuss $g(r)$ for cation-anion and cation-anion. How are these influenced by ion size and radius?\n",
+    "\n",
+    "3. Discuss the differences between the three different salts. Focus on the cation-anion interaction.\n",
+    "\n",
+    "4. What happens to $g(r)$ as the concentration increases. Look i.e. at NaCl and explain.\n",
+    "\n",
+    "5. How is $g(r)$ affected by the bow size? What happens at long separation, when $r$ exceeds half the box length?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "r, g = np.loadtxt('rdf.dat', unpack=True)\n",
@@ -425,7 +487,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "### Widom Particle Insertion"
@@ -433,7 +497,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "In the above, activity coefficients or excess chemical potentials of ions were calculated simply from the average ion density in the grand canonical ensemble where activities are known and constant. An alternative method is to use Widom particle insertion which we covered in the theory section above.\n",
     "In the MC code this can be done by activating an insertion analysis in the input file. The appropriate input is already there (`analysis->widom`) but the interval to which to run it, `nstep` is set to zero. Setting this to a positive integers will activate the sample.\n",
@@ -444,14 +511,18 @@
     "\n",
     "1. For four different salt activities in the interval 50-300 mM, plot the activity coefficient of a neutral particle (add data to the arrays below).\n",
     "2. Repeat the above with a larger radius of the neutral particle.\n",
-    "3. Discuss the results and estimate the [Setschenow coefficient](https://en.wikipedia.org/wiki/Specific_ion_interaction_theory).\n",
+    "3. Discuss the results and estimate the so-called [Setschenow coefficient](https://en.wikipedia.org/wiki/Specific_ion_interaction_theory) which describes how the solubility of gasses is affected by electrolyte.\n",
     "4. How is the solubility of a greenhouse gas like methane affected by the salt content of the oceans?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "activity = [0] # salt activity. Add more...\n",
@@ -461,6 +532,19 @@
     "\n",
     "plt.xlabel(r'$a$ (mol/l)')\n",
     "plt.ylabel(r'$\\gamma$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Comments\n",
+    "\n",
+    "Please leave comments for how we may improve this lab in the future. What was good or bad? Did you find errors or unclear sections?"
    ]
   },
   {
@@ -490,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
