fixed bugs and typos discovered after first lab

--- a/excess/excess.ipynb
+++ b/excess/excess.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Monte Carlo Simulation Exercise:  Electrolyte Solutions\n",
     "\n",
@@ -44,11 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# evaluate this cell to show a movie about MC\n",
@@ -58,10 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Theory\n",
     "\n",
@@ -182,28 +172,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Part I. Mean Activity Coefficients in Bulk Solution\n",
     "\n",
-    "In this first part we estimate mean activity coefficients, $\\gamma_{\\pm}$, of salts in aqueous solution using MC simulation in the Canonical ensemble simulations. In particular we will investigate the three salts in the table below and your task is to find the best parameters to describe the salt _guanidinium chloride_.\n",
+    "In this first part we estimate mean activity coefficients, $\\gamma_{\\pm}$, of salts in aqueous solution using MC simulation in the Grand Canonical ensemble simulations. In particular we will investigate the three salts in the table below and your task is to find the best parameters to describe the salt _guanidinium chloride_ (GdnCl).\n",
     "\n",
-    "Salts     | Radius 1 (Å)     | Radius 2 (Å) | Exp. reference\n",
+    "Salts     | Radius + (Å)     | Radius - (Å) | Exp. reference\n",
     "----------| ---------------- |--------------| ---------------\n",
     "NaCl      |  1.5             | 1.7          | RS (Robinson and Stokes)\n",
     "Na3Cit    |  1.5             | 2.8          | [Apelblat 2014](http://dx.doi.org/10.1007/978-3-319-11233-6)\n",
-    "GdnCl     |  **?**           | **?**        | [Macaskill _et al_ 1977](http://dx.doi.org/10.1021/je60075a024)"
+    "GdnCl     |  **?**           | **?**        | [Macaskill _et al_ 1977](http://dx.doi.org/10.1021/je60075a024)\n",
+    "\n",
+    "_Note:_ The experimental GdnCl data from the Macaskill reference is available in the file [`exp-gdncl-coeff.csv`](exp-gdncl-coeff.csv)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Import required python modules"
    ]
@@ -212,9 +198,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -229,10 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Download and compile the MC software\n",
     "\n",
@@ -243,9 +224,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -265,10 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Run Monte Carlo simulations\n",
     "\n",
@@ -285,8 +261,6 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "scrolled": false
    },
    "outputs": [],
@@ -341,10 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Check MC output\n",
     "\n",
@@ -360,10 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Plot mean activity coefficients\n",
     "\n",
@@ -382,9 +350,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -442,37 +407,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Ion-ion radial distribution function\n",
     "\n",
     "We now plot the radial distribution function, $g(r)$, between ions as sampled during MC simulation.\n",
-    "This analysis is activate via the input in `analysis/atomrdf`.\n",
+    "This analysis is activated via the input in `analysis/atomrdf`.\n",
     "\n",
     "** Questions: **\n",
     "\n",
     "1. Explain the meaning and definition of $g(r).$\n",
     "\n",
-    "2. Plot and discuss $g(r)$ for cation-anion and cation-anion. How are these influenced by ion size and radius?\n",
+    "2. Plot and discuss $g(r)$ for cation-anion and cation-anion. How are these influenced by ion radius?\n",
     "\n",
     "3. Discuss the differences between the three different salts. Focus on the cation-anion interaction.\n",
     "\n",
     "4. What happens to $g(r)$ as the concentration increases. Look i.e. at NaCl and explain.\n",
     "\n",
-    "5. How is $g(r)$ affected by the bow size? What happens at long separation, when $r$ exceeds half the box length?"
+    "5. How is $g(r)$ affected by the box size? What happens at long separation, when $r$ exceeds half the box length?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "r, g = np.loadtxt('rdf.dat', unpack=True)\n",
@@ -487,9 +445,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "source": [
     "### Widom Particle Insertion"
@@ -497,10 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "In the above, activity coefficients or excess chemical potentials of ions were calculated simply from the average ion density in the grand canonical ensemble where activities are known and constant. An alternative method is to use Widom particle insertion which we covered in the theory section above.\n",
     "In the MC code this can be done by activating an insertion analysis in the input file. The appropriate input is already there (`analysis->widom`) but the interval to which to run it, `nstep` is set to zero. Setting this to a positive integers will activate the sample.\n",
@@ -519,9 +472,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -537,9 +488,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "source": [
     "## Comments\n",
@@ -574,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
