--- a/excess/excess.ipynb
+++ b/excess/excess.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Monte Carlo Simulation Exercise:  Electrolyte Solutions\n",
     "\n",
-    "_Mikael Lund, Division of Theoretical Chemistry, Lund university 2017_\n",
+    "_Mikael Lund, Division of Theoretical Chemistry, Lund university_\n",
     "\n",
     "## Introduction to Jupyter Notebooks\n",
     "\n",
@@ -59,9 +59,9 @@
     "_Litterature: Frenkel and Smith, Understanding Molecular Simulation_, Chapters 3 and 5.\n",
     "[[Open Access within LU]](http://ludwig.lub.lu.se/login?url=http://www.sciencedirect.com/science/book/9780122673511)\n",
     "\n",
-    "Metropolis Monte Carlo is an importance sampling technique where we bias the otherwise random MC method to sample points in coordinate space that _contribute_ to properties of interest. In molecular systems, configurations (microstates) with energies, $u$, much higher than the thermal energy, $k_BT$, have a very low probability due to the Boltzmann factor, $P(U) = \\exp(-U/k_BT)$, and therefore do not need to be frequently explored.\n",
+    "Metropolis Monte Carlo is an importance sampling technique where we bias the otherwise random MC method to sample points in coordinate space that _contribute_ to properties of interest. In molecular systems, configurations (microstates) with energies much higher than the thermal energy, $k_BT$, have a very low probability due to the Boltzmann factor, $P(U) = \\exp(-U/k_BT)$, and therefore do not need to be frequently explored.\n",
     "In MC, we perform a finite number of _trial moves_ where the system is taken from on old state ($o$) to a new state ($n$) giving rise to an energy change $\\Delta U$.\n",
-    "The move is accepted or rejected based in the following _acceptance criterium_,\n",
+    "The move is accepted or rejected based in the following _acceptance criterion_,\n",
     "\n",
     "$$ \n",
     "acc(o\\rightarrow n) = \\min(1, e^{-\\Delta U/k_BT})\n",
@@ -71,7 +71,8 @@
     "Temperature and entropy enters the algorithm by allowing acceptance also for moves that leads to an energy _increase_.\n",
     "As $T\\rightarrow\\infty$, all configurations are accepted leading to equal population of all states.\n",
     "When $T\\rightarrow 0$ the system propagates towards a (local) minimum or ground state as expected from statistical thermodynamics.\n",
-    "It is important to realize that the Metropolis MC algorithm does not provide information on equilibrium properties, only. Thus from a MC simulation we cannot say anything about time-dependent or dynamic properties.\n",
+    "It is important to realize that the Metropolis MC algorithm only provide information on _equilibrium properties_.\n",
+    "Thus from a MC simulation we cannot say anything about time-dependent or dynamic properties.\n",
     "\n",
     "In the MC program we will use in this lab, two moves are performed:\n",
     "\n",
@@ -89,7 +90,7 @@
     "acc(N \\rightarrow N-1) = \\min \\left(1, \\frac{N}{V}e^{-(\\Delta U+\\mu)/k_BT}\\right )\n",
     "$$\n",
     "\n",
-    "The insertion/deletion move will give rise to a fluctuating number of particles in the simulation box, and we can therefore calculate an _average concentraion_. The ratio between this and the input activity gives us the _activity coefficient_ which is the topic of the next section.\n",
+    "The insertion/deletion move leads to a fluctuating number of particles in the simulation box, and we can therefore calculate an _average concentraion_. The ratio between this and the input activity gives us the _activity coefficient_ which is the topic of the next section.\n",
     "\n",
     "\n",
     "### Excess Chemical Potential\n",
@@ -125,14 +126,14 @@
     "valid for salt compound $M_pX_q$. Hence, for NaCl, $\\gamma_{\\pm} = \\sqrt{\\gamma_{Na}\\gamma_{Cl}}$.\n",
     "\n",
     "** Question: **\n",
-    "1. What is $\\gamma_{\\pm}$ for sodium sulphate?\n",
+    "1. Give an expression for $\\gamma_{\\pm}$ for sodium sulphate?\n",
     "2. Give the equivalent expression for the _mean_ excess chemical potential, i.e. the free energy change of adding a single, electroneutral salt molecule. Simplify the expression as much as possible.\n",
     "\n",
     "### Statistical Mechanical Perturbation\n",
     "\n",
     "_Literature: D. McQuirrie, Chapter 14-1. [[Full text]](perturbationtheory.pdf) and B. Widom, \"Some Topics in the Theory of Fluids\" [[Full text]](http://dx.doi.org/10.1063/1.1734110)._\n",
     "\n",
-    "Consider a Canonical Ensemble system, $NVT$, where the potential energy function can be written as\n",
+    "Consider the Canonical Ensemble ($NVT$) where the potential energy function can be written as\n",
     "\n",
     "$U = U^0 + U^1$.\n",
     "\n",
@@ -493,7 +494,7 @@
    "source": [
     "## Comments\n",
     "\n",
-    "Please leave comments for how we may improve this lab in the future. What was good or bad? Did you find errors or unclear sections?"
+    "Please leave comments for how we may improve this lab in the future. What was good, what was bad? Did you find errors or unclear sections?"
    ]
   },
   {
@@ -509,7 +510,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -523,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
